--- a/LandingPage.razor
+++ b/LandingPage.razor
@@ -7,6 +7,7 @@
     <MudMainContent Class="pt-0">
         <MudTabs Elevation="4" Rounded="true" Centered="true" Color="@Color.Primary">
             <MudTabPanel Text="Intro">
+                <WpfApp1.RazorFiles.Intro/>
             </MudTabPanel>
             <MudTabPanel Text="Show Data" Disabled="!showdata">
                 @if (showdata)
