--- a/RazorFiles/Category.razor
+++ b/RazorFiles/Category.razor
@@ -13,7 +13,6 @@
                 </MudItem>
                 <MudItem xs="12" Class="d-flex justify-center">
                     <MudButton Variant="Variant.Filled"
-                               DisableElevation="true"
                                Color="Color.Primary"
                                Size="Size.Large"
                                Class="mt-8"
@@ -28,10 +27,9 @@
 </MudContainer>
 @code {
 
-
-
     async Task Save()
     {
         Snackbar.Add("Feature not implemented", Severity.Info);
+        await Task.CompletedTask;
     }
 }
