--- a/RazorFiles/Product.razor
+++ b/RazorFiles/Product.razor
@@ -14,7 +14,6 @@
                 <MudItem xs="12" Class="d-flex justify-center">
                     <MudButton 
                         Variant="Variant.Filled" 
-                        DisableElevation="true" 
                         Color="Color.Primary"
                         Size="Size.Large"
                         Class="mt-8"
@@ -33,5 +32,6 @@
     async Task Save()
     {
         Snackbar.Add("Feature not implemented", Severity.Info);
+        await Task.CompletedTask;
     }
 }
